// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List Item with expense details 1`] = `
<article
  className="expense-list__item"
>
  <header
    className="expense-list__item__header"
  >
    <h4>
      <Link
        className="hidden-link"
        to="/edit/1"
      >
        Food
      </Link>
    </h4>
    <aside>
      Bought food for mastication
    </aside>
  </header>
  <div
    className="expense-list__information"
  >
    <p>
      Value:
      <data
        value={1050}
      >
        €10.50
      </data>
    </p>
    <p>
      Date:
      <time
        dateTime="Thu, 08 Apr 2021 23:00:00 GMT"
      >
        9 April 2021
      </time>
    </p>
  </div>
</article>
`;

exports[`should render Expense List Item with expense details and different currency 1`] = `
<article
  className="expense-list__item"
>
  <header
    className="expense-list__item__header"
  >
    <h4>
      <Link
        className="hidden-link"
        to="/edit/3"
      >
        Credit Card
      </Link>
    </h4>
    <aside>
      Paying off loan to completion
    </aside>
  </header>
  <div
    className="expense-list__information"
  >
    <p>
      Value:
      <data
        value={4500}
      >
        MX$45.00
      </data>
    </p>
    <p>
      Date:
      <time
        dateTime="Thu, 15 Jul 2010 23:00:00 GMT"
      >
        16 July 2010
      </time>
    </p>
  </div>
</article>
`;
